samples/_failures_safe/1761485907_dbf545_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_982d497e.c: In function ‘main’:
./samples/SAFE/__tmp_982d497e.c:152:28: error: missing terminating " character
  152 |                     printf("Cannot multiply matrices -
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_982d497e.c:152:21: error: expected expression at end of input
  152 |                     printf("Cannot multiply matrices -
      |                     ^~~~~~
./samples/SAFE/__tmp_982d497e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_982d497e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_982d497e.c:152:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_982d497e.c:152:21: error: expected declaration or statement at end of input
